--- a/app/src/main/res/layout/fragment_sunset.xml
+++ b/app/src/main/res/layout/fragment_sunset.xml
@@ -28,12 +28,28 @@
 
         </FrameLayout>
 
-        <View
+        <FrameLayout
             android:id="@+id/sea"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="33"
-            android:background="@color/sea" />
+            android:background="@color/sea">
+
+            <ImageView
+                android:id="@+id/shadow"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/shadow"
+                android:layout_gravity="bottom|center" />
+
+        </FrameLayout>
+
+        <!--<View
+            android:id="@+id/sea"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="33"
+            android:background="@color/sea" />-->
 
     </LinearLayout>
 </layout>
