--- a/app/src/main/res/layout/fragment_sunset.xml
+++ b/app/src/main/res/layout/fragment_sunset.xml
@@ -28,9 +28,10 @@
 
         </FrameLayout>
 
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/sea"
             android:layout_width="match_parent"
+            android:gravity="top|center"
             android:layout_height="0dp"
             android:layout_weight="33"
             android:background="@color/sea">
@@ -39,10 +40,9 @@
                 android:id="@+id/shadow"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:src="@drawable/shadow"
-                android:layout_gravity="bottom|center" />
+                android:src="@drawable/shadow"/>
 
-        </FrameLayout>
+        </LinearLayout>
 
         <!--<View
             android:id="@+id/sea"
